# viam-video-playback

./: .gitignore  CMakeLists.txt  Makefile  README.md  meta.json  run.sh
src/: gst_pipeline_wrapper.cpp  gst_pipeline_wrapper.hpp  main.cpp  video_playback_camera.cpp  video_playback_camera.hpp  video_stream_camera.cpp  video_stream_camera.hpp
src/buffer/: frame_pool.cpp  frame_pool.hpp
